@@ -20,7 +20,6 @@ import android.widget.TextView;
 
 import com.squareup.picasso.Picasso;
 
-import java.util.Calendar;
 import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.ListIterator;
@@ -81,7 +80,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
             } else {
                 id = (int) getIntent().getExtras().getLong(AbstractResultsAdapter.Type.tv.name());
                 TvFetcher tf = new TvFetcher();
-                tf.execute(Integer.valueOf(id).toString());;
+                tf.execute(Integer.valueOf(id).toString());
                 ismovie = 0;
             }
 
@@ -161,7 +160,6 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                 break;
 
             case R.id.toCalendar:
-                Calendar cal = Calendar.getInstance();
                 GregorianCalendar calDate = new GregorianCalendar();
                 Intent intent = new Intent(Intent.ACTION_EDIT);
                 intent.setType("vnd.android.cursor.item/event");
@@ -181,7 +179,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
         @Override
         protected MovieDb doInBackground(String... params) {
             if (params.length > 0) {
-                int id = new Integer(params[0]);
+                int id = Integer.valueOf(params[0]);
 
                 try {
                     TmdbApi api = new TmdbApi(API_KEY);
@@ -374,9 +372,9 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                     boolean row2 = false;
                     boolean row3 = false;
 
-                    while(castListIterator.hasNext() && !(row1 == true && row2 == true && row3 == true )){
+                    while(castListIterator.hasNext() && !(row1 && row2 && row3)){
                         PersonCast pc = castListIterator.next();
-                        if (row1 == false){
+                        if (!row1){
                             mainCast1.setText(pc.getName());
                             String character = pc.getCharacter();
                             if (character.isEmpty()){
@@ -385,7 +383,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                                 mainChar1.setText(pc.getCharacter());
                             }
                             row1 = true;
-                        }else if (row2 == false){
+                        }else if (!row2){
                             mainCast2.setText(pc.getName());
                             String character = pc.getCharacter();
                             if (character.isEmpty()){
@@ -394,7 +392,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                                 mainChar2.setText(pc.getCharacter());
                             }
                             row2 = true;
-                        }else if (row3 == false){
+                        }else if (!row3){
                             mainCast3.setText(pc.getName());
                             String character = pc.getCharacter();
                             if (character.isEmpty()){
@@ -406,19 +404,19 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                         }
                     }
 
-                    if (row1 == false){
+                    if (!row1){
                         mainCast1.setText(DEF);
                         mainCast2.setVisibility(View.GONE);
                         mainCast3.setVisibility(View.GONE);
                         mainChar1.setVisibility(View.GONE);
                         mainChar2.setVisibility(View.GONE);
                         mainChar3.setVisibility(View.GONE);
-                    } else if (row2 == false){
+                    } else if (!row2){
                         mainCast2.setVisibility(View.GONE);
                         mainCast3.setVisibility(View.GONE);
                         mainChar2.setVisibility(View.GONE);
                         mainChar3.setVisibility(View.GONE);
-                    } else if (row3 == false) {
+                    } else if (!row3) {
                         mainCast3.setVisibility(View.GONE);
                         mainChar3.setVisibility(View.GONE);
                     }
@@ -492,7 +490,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                 } catch (Exception e){
                 }
 
-        };
+        }
     }
 
     public class TvFetcher extends AsyncTask<String, Object, TvSeries> {
@@ -501,7 +499,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
         @Override
         protected TvSeries doInBackground(String... params) {
             if (params.length > 0) {
-                int id = new Integer(params[0]);
+                int id = Integer.valueOf(params[0]);
 
                 try {
                     TmdbApi api = new TmdbApi(API_KEY);
@@ -682,15 +680,15 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
 
             try {
                 List<PersonCast> listCast = tvSeries.getCredits().getCast();
-                ListIterator<PersonCast> castListIterator = listCast.listIterator();;
+                ListIterator<PersonCast> castListIterator = listCast.listIterator();
 
                 boolean row1 = false;
                 boolean row2 = false;
                 boolean row3 = false;
 
-                while(castListIterator.hasNext() && !(row1 == true && row2 == true && row3 == true )){
+                while(castListIterator.hasNext() && !(row1 && row2 && row3)){
                     PersonCast pc = castListIterator.next();
-                    if (row1 == false){
+                    if (!row1){
                         mainCast1.setText(pc.getName());
                         String character = pc.getCharacter();
                         if (character.isEmpty()){
@@ -699,7 +697,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                             mainChar1.setText(pc.getCharacter());
                         }
                         row1 = true;
-                    }else if (row2 == false){
+                    }else if (!row2){
                         mainCast2.setText(pc.getName());
                         String character = pc.getCharacter();
                         if (character.isEmpty()){
@@ -708,7 +706,7 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                             mainChar2.setText(pc.getCharacter());
                         }
                         row2 = true;
-                    }else if (row3 == false){
+                    }else if (!row3){
                         mainCast3.setText(pc.getName());
                         String character = pc.getCharacter();
                         if (character.isEmpty()){
@@ -720,19 +718,19 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
                     }
                 }
 
-                if (row1 == false){
+                if (!row1){
                     mainCast1.setText(DEF);
                     mainCast2.setVisibility(View.GONE);
                     mainCast3.setVisibility(View.GONE);
                     mainChar1.setVisibility(View.GONE);
                     mainChar2.setVisibility(View.GONE);
                     mainChar3.setVisibility(View.GONE);
-                } else if (row2 == false){
+                } else if (!row2){
                     mainCast2.setVisibility(View.GONE);
                     mainCast3.setVisibility(View.GONE);
                     mainChar2.setVisibility(View.GONE);
                     mainChar3.setVisibility(View.GONE);
-                } else if (row3 == false) {
+                } else if (!row3) {
                     mainCast3.setVisibility(View.GONE);
                     mainChar3.setVisibility(View.GONE);
                 }
@@ -839,6 +837,6 @@ public class MovieView extends AppCompatActivity implements View.OnClickListener
             } catch (Exception e){
                 // TODO : Find a default image
             }
-        };
+        }
     }
 }
